testsuite/tests/patsyn/should_fail/as-pattern.stderr

as-pattern.hs:4:18: error:
    • Pattern synonym definition cannot contain as-patterns (@) which contain free variables:
        x@(Just y)
    • In the declaration for pattern synonym ‘P’
